--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/monguite
 REDIS_URL=redis://localhost:6379/0
 
-DJANGO_SECRET_KEY=
+SECRET_KEY=
 
-DJANGO_DEBUG=True
+DEBUG=True
