--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,31 +4,30 @@ version = "0.1.0"
 description = ""
 authors = ["Felipe Vieira <me@felipet.io>"]
 license = "GPLv3"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Django = "^3.1.2"
-django-environ = "^0.4.5"
-psycopg2 = "^2.8.6"
-django_redis = "^4.12.1"
-requests = "^2.24.0"
+python = "^3.10"
+Django = "^5.1"
+django-environ = "^0.11.2"
+psycopg2-binary = "^2.9.9"
+django-redis = "^5.4.0"
+requests = "^2.32.0"
 
-[tool.poetry.dev-dependencies]
-Werkzeug = "^1.0.1"
-ipdb = "^0.13.4"
-watchgod = "^0.6"
-flake8 = "^3.8.4"
-flake8-isort = "^4.0.0"
-coverage = "^5.3"
-black = "^20.8b1"
-pylint-django = "^2.3.0"
-pre-commit = "^2.8.2"
-factory-boy = "^3.1.0"
-django-debug-toolbar = "^3.1.1"
-django-extensions = "^3.0.9"
-django-coverage-plugin = "^1.8.0"
-pytest-django = "^4.1.0"
-line_profiler = "^3.0.2"
+[tool.poetry.group.dev.dependencies]
+Werkzeug = "^3.0.4"
+ipdb = "^0.13.13"
+flake8 = "^7.1.1"
+flake8-isort = "^6.1.1"
+coverage = "^7.6.1"
+black = "^24.8.0"
+pylint-django = "^2.5.5"
+pre-commit = "^3.8.0"
+factory-boy = "^3.3.1"
+django-debug-toolbar = "^4.4.6"
+django-extensions = "^3.2.3"
+django-coverage-plugin = "^3.1.0"
+pytest-django = "^4.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
