--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "django-filter>=25.2,<26",
     "drf-spectacular>=0.29.0,<0.30",
     "gunicorn>=23.0.0,<24",
+    "pytest-cov>=7.0.0",
+    "pytest>=8.4.2",
 ]
 
 [dependency-groups]
